[FIX] sap.m.WizardProgressNavigator: Long title text is now clipped at two lines max
When the step has long title, the title is now clipped after the
second row in the WizardProgressNavigator.
Optional steps are clipped after the first line as described in
the design specification.

Fixes: https://github.com/SAP/openui5/issues/3610
BCP: 2270144665

--- a/src/sap.m/src/sap/m/themes/base/WizardProgressNavigator.less
+++ b/src/sap.m/src/sap/m/themes/base/WizardProgressNavigator.less
@@ -237,7 +237,6 @@ html.sap-phone .sapMWizardProgressNav {
 }
 
 .sapMWizardProgressNavStepTitle {
-	display: inline-block;
 	overflow: hidden;
 	max-width: 100%;
 	max-height: 2.875rem;
@@ -245,11 +244,13 @@ html.sap-phone .sapMWizardProgressNav {
 	font-size: @sapMFontMediumSize;
 	color: @sapUiGroupTitleTextColor;
 	vertical-align: middle;
+	display: -webkit-inline-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
 }
 
 .sapMWizardProgressNavStepTitleOptional {
-	text-overflow: ellipsis;
-	white-space: nowrap;
+	-webkit-line-clamp: 1;
 	line-height: 100%;
 }
 
